--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -23,4 +23,9 @@
         <item>Delete</item>
     </string-array>
 
+    <string-array name="option_phone_number">
+        <item>Fixed</item>
+        <item>Pool</item>
+    </string-array>
+
 </resources>
