--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -363,6 +363,11 @@
         <item name="android:paddingBottom">@dimen/activity_vertical_margin</item>
     </style>
 
+    <style name="RelativePurchase" parent="ViewMatch">
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+    </style>
+
     <style name="SwitchSettingItem" parent="ViewCommon">
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_alignParentRight">true</item>
