--- a/app/src/main/res/menu/menu_setting.xml
+++ b/app/src/main/res/menu/menu_setting.xml
@@ -3,6 +3,12 @@
     xmlns:appcompat="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_expire"
+        android:title="@string/menu_expire"
+        appcompat:showAsAction="always"
+        android:icon="@drawable/ic_calendar"/>
+
+    <item
         android:id="@+id/menu_setting"
         android:title="@string/menu_setting"
         appcompat:showAsAction="always"
