--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -46,11 +46,35 @@
             style="@style/Divider"
             android:layout_below="@+id/relative_setting_friendly_name" />
 
+        <RelativeLayout
+            android:id="@+id/relative_setting_expire"
+            style="@style/TextSettingItem"
+            android:layout_below="@+id/view_divider_1c"
+            android:visibility="gone">
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_setting_expire"
+                style="@style/ViewCommon"
+                android:text="@string/setting_expire"
+                android:textSize="18sp" />
+
+            <com.ethan.morephone.widget.MyTextView
+                android:id="@+id/text_setting_expire_set"
+                style="@style/ViewCommon"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/text_setting_expire"
+                android:layout_marginTop="4dp" />
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/view_divider_1d"
+            style="@style/Divider"
+            android:layout_below="@+id/relative_setting_expire" />
 
         <RelativeLayout
             android:id="@+id/relative_setting_configure_sms_forwarding"
             style="@style/RelativeSetting"
-            android:layout_below="@+id/view_divider_1c">
+            android:layout_below="@+id/view_divider_1d">
 
             <com.ethan.morephone.widget.MyTextView
                 android:id="@+id/text_setting_configure_sms_forwarding"
