--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -8,9 +8,9 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        tools:context=".MainActivity"/>
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context=".MainActivity" />
 
     <com.ethan.morephone.widget.RecyclerViewFastScroller
         android:id="@+id/fastscroller"
@@ -19,7 +19,16 @@
         android:layout_alignBottom="@id/recyclerview"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/recyclerview"
-        />
+        android:layout_alignTop="@id/recyclerview" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:clickable="true"
+        android:src="@drawable/ab_arrow_back" />
+
 
 </RelativeLayout>
