--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -484,4 +484,24 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="EditTextContactField" parent="ViewMatch">
+        <item name="android:textStyle">normal</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:background">#00000000</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_marginLeft">@dimen/activity_main_margin</item>
+        <item name="android:layout_marginTop">@dimen/activity_vertical_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_main_margin</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="EditTextDivider">
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/colorGray</item>
+        <item name="android:layout_marginLeft">@dimen/activity_main_margin</item>
+        <item name="android:layout_marginTop">@dimen/activity_vertical_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_main_margin</item>
+    </style>
 </resources>
