--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -24,6 +24,11 @@
         <item>Delete</item>
     </string-array>
 
+    <string-array name="call_log_options">
+        <item>Contact</item>
+        <item>Delete</item>
+    </string-array>
+
     <string-array name="option_phone_number">
         <item>Fixed</item>
         <item>Pool</item>
