--- a/app/src/main/res/layout/quickcontact_expand_suggestion_card.xml
+++ b/app/src/main/res/layout/quickcontact_expand_suggestion_card.xml
@@ -149,7 +149,7 @@
                 style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/quickcontact_suggestion_cancel_button"/>
+                android:text="@android:string/cancel"/>
 
             <Button
                 android:id="@+id/link_button"
