--- a/app/src/main/res/layout/quickcontact_collapsed_suggestion_card.xml
+++ b/app/src/main/res/layout/quickcontact_collapsed_suggestion_card.xml
@@ -43,6 +43,6 @@
                 android:paddingEnd="@dimen/editor_round_button_padding_right"
                 android:paddingTop="@dimen/editor_round_button_padding_top"
                 android:paddingBottom="@dimen/editor_round_button_padding_bottom"/>
-    </LinearLayout>>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
